# openapi-spec.json
@@ -37,10 +37,7 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "accessToken": {
-                      "type": "string"
-                    },
-                    "refreshToken": {
+                    "message": {
                       "type": "string"
                     }
                   }
@@ -80,10 +77,7 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "accessToken": {
-                      "type": "string"
-                    },
-                    "refreshToken": {
+                    "message": {
                       "type": "string"
                     }
                   }
@@ -205,10 +199,6 @@
             "type": "string",
             "example": "2000-01-01"
           },
-          "name": {
-            "type": "string",
-            "example": "Nguyễn Văn A"
-          },
           "role": {
             "type": "string",
             "example": "Owner"
@@ -220,7 +210,6 @@
           "phone",
           "email",
           "dateOfBirth",
-          "name",
           "role"
         ]
       }
